app/css/template.css
/* ... */
.padding-left-40 {
	padding-left: 40px;
}
.padding-top-5 {
	padding-top: 5px;
}
.padding-top-10 {
	padding-top: 10px;
}
.padding-top-15 {
	padding-top: 30px;
}
.padding-top-20 {
	padding-top: 30px;
}
.padding-top-30 {
	padding-top: 30px;
}
.padding-bottom-10 {
	padding-top: 30px;
}
.padding-bottom-15 {
	padding-top: 30px;
}
.padding-bottom-20 {
	padding-top: 30px;
}
.padding-bottom-30 {
	padding-top: 30px;
}
.document-sharing{
    display: inline;
}
.document-sharing .tab-pane .content {
    margin: 2%;
}
.cursor-pointer{
    cursor: pointer;
}
#reference-records-table .truncate-record {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    max-height: 48px;
    cursor: pointer;
}
#reference-records-table table tr td {
    border-top: none !important;
    border-bottom: none !important;
}
@media (max-width: 500px) {
     #reference-records-table{
         overflow-x: auto;
     }
    #reference-records-table .truncate-record {
        -webkit-line-clamp: 5;
        max-height: 112px;
    }
}

.edit.capacity-building-initiative {
    padding: 24px;
    background-color:#FFF;
    border-bottom:2px solid #ccc;
}
.edit.capacity-building-initiative .km-control-group .control-label{
    display: block;
}
.edit.capacity-building-initiative .km-control-group .control-label[for="startDate"]{
    display: inline-block;
}
.edit.capacity-building-initiative .km-control-group .control-label[for="endDate"]{
    display: inline-block;  
}


.short-text-display{
  display:none;
}
.full-text-display{
    display: inline-block  ;
}

.editHeader .dashboard-tour .help-tour,
#SubmitPage .dashboard-tour .help-tour,
#RegisterPage .dashboard-tour .help-tour{
    font-size:13px;
    text-transform: uppercase;
    font-weight: 500;
    cursor:pointer;
    color: #fff;
}
.countries-list .help-tour{
    font-size:13px;
    margin:5px 10px 0 5px;
    text-transform: uppercase;
    font-weight: 500;
    text-shadow: 0px 1px 0px rgba(255,255,255,.5);
    cursor:pointer;
}
.search-icons bch-icons{
    position: relative;
    top: -5px;
}
.search-icons bch-icons > span{
    border-right: 0!important;
    padding-right: 0px!important;
    margin-right: 0px!important;
}
.edit-measure-status .planing-plc{
    display: block;
}
.edit-measure-status .planing-plc input{
    margin-right: 5px;
}
.edit-measure-status .jurisdiction-title [km-textbox-ml][disabled] input{
    pointer-events: none;
    background-color: #f5f5f5;
}  
#searchSortOptions .sort-options{
    display: inline-block;
    margin-top:8px;
    white-space: nowrap;
    position: relative;
    left: -11px;
}
#searchSortOptions .sort-options > li{
    display: inline;
    margin:0;
    margin-left:10px;
    background-color: #fff;
    padding:5px;
    border-radius: 4px;
    border: 1px solid #ccc;
}
#searchSortOptions .sort-options > li > a,
.table-export-button,
.share-button{
    font-size: 12px;
    text-transform: uppercase;
    color:#555;
    font-weight: bold;
    
}
#recordContent .share-button{
    text-transform: none;
    font-weight: normal;
    font-size: 14px;
    color: #fff;
}

#innerPage .mastHead{
	background-color: #00405C;
	/* color:white; */
	padding:10px 20px 40px 20px;
	margin:0;
}

#innerPage .innerPageContent{
	padding:20px;
	margin:0 0 40px 0;
}

#pageHeader .header{background-color: #FFF;border-bottom: 1px solid #ddd;}
#pageHeader .small-header{padding: 5px 20px;}
#pageHeader .small-header > .acronym{font-size:24px;font-weight:bold;padding-right:10px;}
#pageHeader .small-nav > ul > li > .nav-link {width:100%;padding:10px; margin:5px 0;font-size: 16px;text-transform: uppercase;color: #555;font-weight: 500}
#pageHeader .small-nav > ul {list-style-type: none; padding:0; margin:0;}

#pageHeader .normal-header {padding:20px 20px 0 20px;height:80px;}
#pageHeader .normal-header > .spine-logo{height:44px;position:relative;top:-13px;padding:0 5px 0 0;margin:0;}
#pageHeader .normal-header > .acronym{font-size:48px;font-weight:bold;padding-right:10px;}
#pageHeader .normal-header > .ch-name{text-transform:uppercase;font-size:18px;font-weight:bold;}
#pageHeader .normal-header > .ch-logo{position:relative;top:-10px;padding: 0; margin:20px 0;max-height:60px;}
#pageHeader .normal-nav {padding:0 34px 2px 15px;}
#pageHeader .normal-nav > ul > li > .nav-link {font-size: 13px;text-transform: uppercase;color: #555;font-weight: 500; }

#pageHeader .breadcrumbs {text-transform: uppercase;margin-left:26px;font-size:12px; padding:10px 3px;color:#111;font-weight:500}
#search-new .isAlertUserSearch{
    width: 100%;
}
#search-new .isAlertUserSearch #Search-Filter ul.list-group{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 20px;
}
.user-search-alert .modal-body {
    max-height: 100vh;
    overflow-y: scroll;
}

.save-this-search-alert .saved-filters-list .label-info{
    margin-bottom: 10px;
    margin-right: 10px;
    margin-left: 10px;
}
.capitalize-first-letter {
    text-transform:capitalize;
}

#Search-Filter .contact-spacing{
    margin-top: 25px;
}

#Search-Filter strong, #Search-Filter .filter-item label {
      color:#555;
}
.countries-list .evenly-spaced {
	display: grid;
	grid-template-columns: repeat(14, 1fr);
}
.display-content {
    display: contents;
}
.register-content #SubmitPage .offline-format-text {
    max-width:10%;
    text-align:right;
    padding-right: 20px;
}
.register-content #SubmitPage .offline-format-language {
    max-width:10%;
    text-align:right;
    padding-right: 10px;
}

#CBD-Branding .signin-text{
    padding-left: 2px;
}

/* Common CSS starts  */
a {
    text-decoration: none;
}
.date-badge {
    background-color: #777 !important;
}
.save-this-search-alert .label-info {
    background-color: #5bc0de;
}
/* ... */

